--- a/orchestrator/env.example
+++ b/orchestrator/env.example
@@ -16,6 +16,10 @@ ENABLE_VERCEL_DEPLOYMENT=false
 ENABLE_NETLIFY_DEPLOYMENT=false
 ENABLE_CONTRACT_DEPLOYMENT=true
 
+# Return deployment errors instead of falling back to local deployment
+# Set to true to enable LLM error feedback loop in miniapp-creator
+RETURN_DEPLOYMENT_ERRORS=true
+
 # External Deployment Tokens (only needed if deployments enabled)
 DEPLOYMENT_TOKEN_SECRET=your-vercel-token-here
 NETLIFY_TOKEN=your-netlify-token-here
