--- a/orchestrator/env.example
+++ b/orchestrator/env.example
@@ -24,6 +24,20 @@ RETURN_DEPLOYMENT_ERRORS=true
 DEPLOYMENT_TOKEN_SECRET=your-vercel-token-here
 NETLIFY_TOKEN=your-netlify-token-here
 
+# Vercel Team/Organization (optional - use if deploying to a team)
+# This ensures domains are added to the correct Vercel account
+# VERCEL_TEAM_ID=team_abc123xyz
+# VERCEL_ORG_ID=team_abc123xyz
+
+# Custom Domain Configuration
+ENABLE_CUSTOM_DOMAINS=true
+CUSTOM_DOMAIN_BASE=minidev.fun
+
 # Contract Deployment Configuration (only needed if contract deployment enabled)
 PRIVATE_KEY=your-private-key-with-base-sepolia-eth
 BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
+
+# Base Mainnet Configuration (for production deployments)
+BASE_NETWORK=base  # Set to "base" for mainnet, "baseSepolia" for testnet (default: base)
+BASE_RPC_URL=https://mainnet.base.org
+BASESCAN_API_KEY=your-basescan-api-key-for-verification
