--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -7,6 +7,7 @@
     "test:integration": "./run-integration-tests.js"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "body-parser": "^1.20.2",
     "dotenv": "^17.2.2",
     "express": "^4.19.2",
